fixed about page layout issues

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #fff;
 $secondary-color: #663399;
 $show-home-image: true;
-$home-image: url(../img/background.jpg);
+$home-image: url('img/background.jpg');
 $background-opacity: 0.9;
 @mixin easeOut {
     transition: all 0.5s ease-out;
