--- a/scss/main.scss
+++ b/scss/main.scss
@@ -88,7 +88,6 @@ main {
     grid-gap: 30px;
     grid-template-areas: 
     'bioimage bio bio'
-    'focus focus focus'
     'job1 job2 job3';
     grid-template-columns: repeat(3, 1fr);
 
@@ -106,7 +105,6 @@ main {
 
     .focus {
         grid-area: focus;
-        width: 100%;
     }
 
     .job-1 {
